--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     { bbmustache, "1.9.0" },
-    { tools, {git, "https://github.com/ngqlaw/tools.git", {tag, "1.1.0"}} }
+    { noisy_tools, {git, "https://github.com/ngqlaw/tools.git", {tag, "1.2.0"}} }
 ]}.
 
 {dist_node, [
